# ossify

./: .gitignore  Justfile  README.md  pyproject.toml
.github/workflows/: pages.yml
data/: repos.parquet
data/repos/.stale/lmmx__ansi-to-html/: activity.toml
data/repos/.stale/lmmx__beeb/: identity.toml  release.toml  verification.toml
data/repos/.stale/lmmx__bisque/: identity.toml
data/repos/lmmx__ansi-to-html/: identity.toml  release.toml  verification.toml
data/repos/lmmx__aws-step-functions-pydantic/: activity.toml  identity.toml  release.toml
data/repos/lmmx__beeb/: activity.toml  identity.toml
data/repos/lmmx__bisque/: activity.toml  identity.toml  release.toml
data/repos/lmmx__botodto/: activity.toml  identity.toml
data/repos/lmmx__campbells/: activity.toml  identity.toml
data/repos/lmmx__chinois/: activity.toml  identity.toml
data/repos/lmmx__classipypi/: activity.toml  identity.toml
data/repos/lmmx__classipypi/clone/: .pre-commit-config.yaml  mkdocs.yml  pyproject.toml
data/repos/lmmx__cliptargets/: activity.toml  identity.toml
data/repos/lmmx__comrak/: activity.toml  deps.toml  identity.toml  release.toml
data/repos/lmmx__czkawka/: activity.toml  identity.toml  release.toml
data/repos/lmmx__datapasta/: identity.toml
data/repos/lmmx__dex/: identity.toml
data/repos/lmmx__fieldrouter/: activity.toml  identity.toml  presentation.toml  release.toml
data/repos/lmmx__fugit/: activity.toml  identity.toml  release.toml
data/repos/lmmx__godto/: identity.toml  release.toml
data/repos/lmmx__grepow/: activity.toml  identity.toml  presentation.toml  release.toml
data/repos/lmmx__grepow/clone/: .pre-commit-config.yaml  README.md  pyproject.toml
data/repos/lmmx__hftorchcache/: activity.toml  identity.toml  release.toml
data/repos/lmmx__htmd/: identity.toml  release.toml
data/repos/lmmx__htmd/clone/: Cargo.toml  Justfile  README.md  pyproject.toml
data/repos/lmmx__htmd/clone/.github/workflows/: CI.yml
data/repos/lmmx__igloosphinx/: activity.toml  identity.toml  release.toml
data/repos/lmmx__importopoi/: activity.toml  identity.toml  release.toml
data/repos/lmmx__inline-snapshot-phash/: activity.toml  identity.toml
data/repos/lmmx__iofx/: activity.toml  identity.toml  release.toml  verification.toml
data/repos/lmmx__lol-html/: activity.toml  identity.toml  release.toml
data/repos/lmmx__lol-html/clone/: Cargo.toml  Justfile  LICENSE  README.md  pyproject.toml
data/repos/lmmx__magic-scrape/: activity.toml  identity.toml
data/repos/lmmx__mcpup/: identity.toml  release.toml
data/repos/lmmx__minder/: activity.toml  identity.toml
data/repos/lmmx__mkdocs-extra-sass-mathshim/: activity.toml  identity.toml  release.toml
data/repos/lmmx__mkdocs-extra-sass-mathshim/clone/: .editorconfig  CONTRIBUTING.md  README.md  pyproject.toml
data/repos/lmmx__octopolars/: activity.toml  identity.toml  release.toml
data/repos/lmmx__page-dewarp/: deps.toml  identity.toml  release.toml
data/repos/lmmx__pdf2up/: activity.toml  identity.toml
data/repos/lmmx__polars-config-meta/: activity.toml  identity.toml  release.toml
data/repos/lmmx__polars-diskcache/: identity.toml
data/repos/lmmx__polars-expr-hopper/: activity.toml  identity.toml  modernisation.toml  release.toml
data/repos/lmmx__polars-fastembed/: identity.toml  release.toml
data/repos/lmmx__polars-genson/: activity.toml  deps.toml  identity.toml
data/repos/lmmx__polars-lprof/: activity.toml  deps.toml  identity.toml  presentation.toml  release.toml
data/repos/lmmx__polars-ls/: identity.toml  release.toml  verification.toml
data/repos/lmmx__polars-luxical/: identity.toml  release.toml
data/repos/lmmx__polars-permute-plugin/: activity.toml  identity.toml  release.toml
data/repos/lmmx__polars-scheduler/: identity.toml  modernisation.toml  release.toml
data/repos/lmmx__polars-schema-index/: activity.toml  identity.toml
data/repos/lmmx__powell-opt/: identity.toml  release.toml
data/repos/lmmx__prqrs/: activity.toml  identity.toml  modernisation.toml  release.toml
data/repos/lmmx__pydantic-ast/: activity.toml  identity.toml
data/repos/lmmx__pydantic-function-models/: activity.toml  identity.toml  release.toml
data/repos/lmmx__pydantic-schema-sync/: activity.toml  identity.toml  release.toml
data/repos/lmmx__pydantree/: activity.toml  identity.toml
data/repos/lmmx__pydanttention/: activity.toml  identity.toml
data/repos/lmmx__pyflantic/: activity.toml  identity.toml
data/repos/lmmx__pypdown/: activity.toml  identity.toml  release.toml
data/repos/lmmx__pypi-docs-url/: activity.toml  identity.toml  release.toml
data/repos/lmmx__range-streams/: activity.toml  identity.toml  release.toml
data/repos/lmmx__refactory/: activity.toml  identity.toml  modernisation.toml
data/repos/lmmx__refactory/clone/: CONDA_SETUP.md  pyproject.toml  setup.py
data/repos/lmmx__rehome/: identity.toml  release.toml
data/repos/lmmx__textum/: activity.toml  identity.toml
data/repos/lmmx__tsutil-py/: activity.toml  identity.toml  release.toml
data/repos/lmmx__tubeulator/: identity.toml
data/repos/lmmx__tubeulator-models/: activity.toml  identity.toml  modernisation.toml  release.toml
data/repos/lmmx__tubeulator-models/clone/: .gitignore  .pre-commit-config.yaml  Justfile  README.md  diagnostic.py  pyproject.toml
data/repos/lmmx__validate-call-safe/: activity.toml  identity.toml  release.toml  verification.toml
data/repos/lmmx__wend/: activity.toml  identity.toml  release.toml
data/repos/qu-arx__qp/: identity.toml  release.toml
data/repos/spin-systems__quill/: activity.toml  identity.toml  release.toml
src/ossify/: __init__.py  cli.py  compose.py  defaults.py  defaults.toml  idem.py  persist.py
src/ossify/extract/: clone.py  commits.py  pypi_json.py  pypi_user.py  repos.py
src/ossify/models/: __init__.py  _base.py  activity.py  deps.py  derived.py  enums.py  identity.py  modernisation.py  presentation.py  record.py  release.py  verification.py
src/ossify/rules/: __init__.py  _base.py
src/ossify/site/: build.py
(+171 files in other folders)
