[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[project]
name = "ossify-observatory"
version = "0.1.0"
description = "Personal OSS repo maintenance status tracking"
readme = "README.md"
authors = [{name = "Louis Maddox", email = "louismmx@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.28",
  "selectolax>=0.3.27",
  "polars>=1.20",
  "pydantic>=2.10",
  "tomli-w>=1.1",
  "tqdm>=4.67",
  "pyyaml>=6.0",
  "packaging>=24"
]

[project.scripts]
ossify = "ossify.cli:run_all"
ossify-discover = "ossify.extract.pypi_user:discover"
ossify-pypi = "ossify.extract.pypi_json:fetch_all"
ossify-repos = "ossify.extract.repos:derive"
ossify-clone = "ossify.extract.clone:clone_all"
ossify-commits = "ossify.extract.commits:fetch_all"
ossify-classify = "ossify.compose:classify_all"
ossify-build = "ossify.persist:build_parquet"
ossify-site = "ossify.site.build:build"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "E401",
  "F401"
]

[tool.uv.build-backend]
module-name = "ossify"
module-root = "src"
