[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[project]
name = "ossify-observatory"
version = "0.1.0"
description = "Personal OSS repo maintenance status tracking"
readme = "README.md"
authors = [{name = "Louis Maddox", email = "louismmx@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.28",
  "selectolax>=0.3.27",
  "polars>=1.20",
  "pydantic>=2.10",
  "tomli-w>=1.1",
  "tqdm>=4.67",
  "pyyaml>=6.0",
  "packaging>=24"
]

[project.scripts]
ossify          = "ossify.cli:run_all"
ossify-discover = "ossify.cli:discover_cli"
ossify-pypi     = "ossify.cli:pypi_cli"
ossify-repos    = "ossify.cli:repos_cli"
ossify-commits  = "ossify.cli:commits_cli"
ossify-classify = "ossify.cli:classify_cli"
ossify-build    = "ossify.cli:build_cli"
ossify-site     = "ossify.cli:site_cli"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "E401",
  "F401"
]

[tool.uv.build-backend]
module-name = "ossify"
module-root = "src"
