[build-system]
build-backend = "pdm.backend"
requires = [
    "pdm-backend",
]

[project]
name = "mkdocs-extra-sass-mathshim"
version = "0.1.1"
description = "A fork of mkdocs-extra-sass-plugin with math function shims for non-Dart Sass."
readme = "README.md"
authors = [
    { name = "Louis Maddox", email = "louismmx@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    "mkdocs>=1.1",
    "beautifulsoup4>=4.6.3",
    "libsass>=0.15",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."mkdocs.plugins"]
extra-sass = "mkdocs_extra_sass_mathshim.plugin:ExtraSassPlugin"

[project.urls]
Homepage = "https://github.com/lmmx/mkdocs-extra-sass-mathshim"
Repository = "https://github.com/lmmx/mkdocs-extra-sass-mathshim.git"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "flake8>=3.8.4",
    "flake8-bugbear>=20.11.1",
    "flake8-isort>=4.0.0",
    "flake8-print>=4.0.0",
    "autopep8>=1.5.4",
]
