[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
pull = [
  "pdfplumber>=0.11.9",
  "polars==1.29",
  "tubeulator>=0.1.3"
]
prep = [
  "city2graph>=0.2.3",
  "httpx>=0.28.1",
  "pyarrow>=20.0.0", # parquet I/O for geopandas
  "rich>=14.3.2"
]
pyg = [
  "torch>=2.0.0",
  "torch-geometric>=2.7.0"
]
plot = [
  "contextily>=1.7.0",
  "matplotlib>=3.10.8"
]
hf = [
  "hf>=1.4.1",
  "safetensors>=0.7.0"
]
xls = [
  "xlrd>=2.0.2"
]

[project]
name = "tubeulator-models"
version = "0.1.5"
description = "Models of the TfL transit network"
readme = "README.md"
authors = [
  {name = "Louis Maddox", email = "louismmx@gmail.com"}
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
inference = [
  "torch>=2",
  "torch-geometric>=2.7",
  "safetensors>=0.7",
  "huggingface-hub>=0.20"
]
cli = [
  "tubeulator-models[inference]",
  "rich>=14"
]

[project.scripts]
tm-sync-tts = "tubeulator_models.cli:sync_timetables"
tm-build-gtfs = "tubeulator_models.cli:build_gtfs"
tm-build-routes = "tubeulator_models.cli:build_routes"
tm-plot = "tubeulator_models.cli:plot_graph"
tm-gtfs2graph = "tubeulator_models.cli:gtfs2graph"
tm-graph2pyg = "tubeulator_models.cli:graph2pyg"
tm-gtfs2pyg = "tubeulator_models.cli:gtfs2pyg"
tm-train = "tubeulator_models.training.train:main"
tm-export = "tubeulator_models.serving.export:main"
tm-infer = "tubeulator_models.serving.infer:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["C408", "C901", "E501", "E722", "E741"]
select = ["C", "E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = ["tubeulator_models"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E401", "F401"]

[tool.uv]
default-groups = ["pull", "prep", "plot", "pyg", "hf"]
